--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
-    "styled-components": "^6.0.4"
+    "styled-components": "^6.0.4",
+    "swiper": "^10.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
